# repository/types.go
@@ -1,10 +1,25 @@
 // This file contains types that are used in the repository layer.
 package repository
 
-type GetTestByIdInput struct {
-	Id string
+import "time"
+
+type CreateUserInput struct {
+	Name     string
+	Phone    string
+	Password string
 }
 
-type GetTestByIdOutput struct {
-	Name string
+type UpdateUserInput struct {
+	Id    int
+	Name  string
+	Phone string
+}
+
+type User struct {
+	Id        int
+	Name      string
+	Phone     string
+	Password  string
+	UpdatedAt time.Time
+	CreatedAt time.Time
 }
